# ai-document-quality-analyzer

./: .gitignore  Dockerfile  PLAN.md  README.md  deploy.sh  env.example  fly.toml  pyproject.toml
.claude/: settings.local.json
src/doc_analyzer/: __init__.py  api.py  cli.py  config.py  models.py
src/doc_analyzer/analyzers/: __init__.py  llm_analyzer.py  quality_analyzer.py  rule_checker.py
src/doc_analyzer/extractors/: __init__.py  google_docs.py  google_slides.py
src/doc_analyzer/integrations/: __init__.py  fathom.py  slack.py
src/doc_analyzer/rulesets/: __init__.py  default.json  kickoff.json  proposal.json  transcript_client.json  transcript_sales.json
